--- a/src/Web/DamaWeb/Pages/Components/Menu/Default.cshtml
+++ b/src/Web/DamaWeb/Pages/Components/Menu/Default.cshtml
@@ -52,10 +52,10 @@
             <a class="nav-link text-center" asp-page="/Customize/Index">PERSONALIZAR</a>
         </li>
         <li class="nav-item d-block d-sm-none">
-            <a class="nav-link text-black-50" href="#">NEWSLETTER</a>
+            <a class="nav-link text-black-50" href="https://www.damanojornal.com/proximos-eventos/">EVENTOS</a>
         </li>
         <li class="nav-item d-block d-sm-none">
-            <a class="nav-link text-black-50" href="#">ONDE NOS PODE ENCONTRAR?</a>
+            <a class="nav-link text-black-50" href="https://www.damanojornal.com/perguntas-frequentes/">PERGUNTAS FREQUENTES</a>
         </li>
         <li class="nav-item d-block d-sm-none">
             <a class="nav-link text-black-50" href="#">TERMOS E CONDIÇÕES</a>
