--- a/src/Web/DamaWeb/wwwroot/css/shared/header.css
+++ b/src/Web/DamaWeb/wwwroot/css/shared/header.css
@@ -1,5 +1,4 @@
-﻿#topbar a, #footer-social a {
-    color: #fff;
+﻿#topbar a, #footer-social a {    
     transition: transform .2s;
 }
 
@@ -78,7 +77,7 @@
     height: 40px;
     margin: 0 9px;
     border-left: 1px dotted #f2f2f2;
-    border-right: 1px dotted #ffffff;
+    border-right: 1px dotted #000000;
 }
 
 #topbar .fa-stack {
@@ -86,8 +85,13 @@
 }
 
 .icon-background {
+    color: #9c9c9c;
+}
+
+.icon-background-white {
     color: #fff;
 }
+
 
 .dropdown-menu {
     background-color: #fff;
