--- a/src/Web/DamaWeb/Pages/Components/Basket/Default.cshtml
+++ b/src/Web/DamaWeb/Pages/Components/Basket/Default.cshtml
@@ -7,6 +7,7 @@
 
 
 <a class="nav-link"
-   asp-page="/Basket/Index">
+   asp-page="/Basket/Index"
+   title="O meu Carrinho">
     <i class="fas fa-shopping-cart fa-lg"></i>
 </a>
