--- a/src/Web/DamaWeb/Pages/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Index.cshtml
@@ -57,7 +57,7 @@
         <div class="esh-catalog-items row">
             @foreach (var catalogItem in Model.CatalogModel.NewCatalogItems)
             {
-                <div class="esh-catalog-item col-md-3">
+                <div class="esh-catalog-item col-md-2 col-6">
                     @await Html.PartialAsync("_product", catalogItem)
                 </div>
             }
@@ -77,13 +77,14 @@
         <div class="esh-catalog-items row">
             @foreach (var catalogItem in Model.CatalogModel.FeaturedCatalogItems)
             {
-                <div class="esh-catalog-item col-md-3">
+                <div class="esh-catalog-item col-md-2 col-6">
                     @await Html.PartialAsync("_product", catalogItem)
                 </div>
             }
         </div>
     </div>
 }
+<partial name="_productAdded" />
 
 @section Scripts {
     <script>
