--- a/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
@@ -19,7 +19,7 @@
         <div class="esh-catalog-items row">
             @foreach (var catalogItem in Model.CatalogTypeModel.CatalogModel.CatalogItems)
             {
-                <div class="esh-catalog-item col-md-3">
+                <div class="esh-catalog-item col-md-2 col-6">
                     @await Html.PartialAsync("_product", catalogItem)
                 </div>
             }
