--- a/src/Web/DamaWeb/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_LoginPartial.cshtml
@@ -4,13 +4,14 @@
 {
     <li class="nav-item px-2 px-sm-0">
         <a class="nav-link"
-           asp-page="/Order/Index">
+           asp-page="/Order/Index" title="As Minhas Encomendas">
             <i class="fas fa-shopping-bag fa-lg"></i>
         </a>
     </li>
     <li class="nav-item px-2 px-sm-0">
         <a class="nav-link"
-           asp-page="/Account/Manage/Index">
+           asp-page="/Account/Manage/Index"
+           title="O meu perfil">
             <i class="fas fa-user fa-lg"></i>
         </a>
     </li>
@@ -18,7 +19,8 @@
         <form asp-controller="Account" asp-action="Logout" method="post"
               id="logoutForm">
             <a class="nav-link"
-               href="javascript:document.getElementById('logoutForm').submit()">
+               href="javascript:document.getElementById('logoutForm').submit()"
+               title="Logout">
                 <i class="fas fa-sign-out-alt fa-lg"></i>
             </a>
         </form>
