--- a/src/Web/DamaWeb/Pages/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Index.cshtml
@@ -4,6 +4,8 @@
     @model IndexModel
 }
 
+<partial name="_StatusMessage" for="StatusMessage" />
+
 @if (Model.CatalogModel.Banners?.Count > 0)
 {
     <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
