add to cart fix

--- a/src/Web/DamaWeb/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_LoginPartial.cshtml
@@ -32,7 +32,7 @@
 else
 {
     <li class="nav-item px-2 px-sm-0">
-        <a asp-page="/Account/Signin" class="nav-link">
+        <a asp-page="/Account/Signin" class="nav-link" title="Entra com o teu email">
             <i class="fas fa-user fa-lg"></i>
         </a>
     </li>
