fix script relative path

--- a/src/Web/DamaWeb/Pages/Account/Manage/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/Manage/Index.cshtml
@@ -231,5 +231,5 @@
 </div>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script src="/js/pages/profile.js" asp-append-version="true"></script>
+    <script src="~/js/pages/profile.js" asp-append-version="true"></script>
 }
