--- a/src/Web/DamaWeb/Pages/Basket/CheckoutStep2.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/CheckoutStep2.cshtml
@@ -176,10 +176,10 @@
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
     <environment include="Development">
-        <script src="/js/pages/checkout.js"></script>
+        <script src="~/js/pages/checkout.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="/js/pages/checkout.js" asp-append-version="true"></script>
+        <script src="~/js/pages/checkout.js" asp-append-version="true"></script>
     </environment>
     <script>
         setBasketTotals(@Model.BasketModel.TotalWithoutShipping().ToString().Replace(',','.'),@Model.BasketModel.TotalWithShipping().ToString().Replace(',','.'));
