--- a/src/Web/Backoffice/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Web/Backoffice/Pages/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
+    <form asp-page="/Account/SignedOut" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
                 <a asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
