--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -252,7 +252,7 @@
                 © Copyright 2010-@DateTime.Now.Year Dama no Jornal&reg; | All Rights Reserved
             </div>
             <div id="copyText" class="col pt-3 pb-2 text-center text-lg-right small">
-                <a href="https://dotnet.microsoft.com/learn/aspnet/what-is-aspnet-core" class="text-black-50" target="_blank">Powered by .Net Core 2.2</a>
+                <a href="https://dotnet.microsoft.com/learn/aspnet/what-is-aspnet-core" class="text-black-50" target="_blank">Powered by ASP.Net Core @Environment.Version</a>
             </div>
         </div>
     </div>
