upgrade Infrastructure to 2.1; small fixes;

--- a/src/Web/DamaWeb/Pages/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Index.cshtml
@@ -49,7 +49,7 @@
 
 @if (Model.CatalogModel.NewCatalogItems.Any())
 {
-    <div class="news-heading text-center">
+    <div class="news-heading text-center mt-3 mt-sm-5">
         <h2 class="lily">Novidades</h2>
         <img class="separator" src="~/images/barra-coracao.png" />
     </div>
@@ -69,7 +69,7 @@
 
 @if (Model.CatalogModel.FeaturedCatalogItems.Any())
 {
-    <div class="news-heading text-center">
+    <div class="news-heading text-center mt-3 mt-sm-5">
         <h2 class="lily">Destaques</h2>
         <img class="separator" src="~/images/barra-coracao.png" />
     </div>
