--- a/src/Web/Backoffice/Pages/Products/Delete.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Delete.cshtml
@@ -55,6 +55,12 @@
             @Html.DisplayFor(model => model.ProductModel.Price)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.Discount)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductModel.Discount)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProductModel.ShowOnShop)
         </dt>
         <dd>
