--- a/src/Web/Backoffice/Pages/Products/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Details.cshtml
@@ -63,6 +63,12 @@
             @Html.DisplayFor(model => model.ProductModel.Price)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.Discount)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductModel.Discount)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProductModel.Sku)
         </dt>
         <dd>
