--- a/src/Web/Backoffice/Pages/Products/Create.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Create.cshtml
@@ -26,7 +26,7 @@
             <div class="form-group">
                 <label asp-for="ProductModel.Description" class="control-label"></label>
                 <textarea asp-for="ProductModel.Description" class="form-control" rows='5'></textarea>
-                <span asp-validation-for="ProductModel.Description" class="text-danger"></span>                
+                <span asp-validation-for="ProductModel.Description" class="text-danger"></span>
             </div>
             <div class="form-group required">
                 <label asp-for="ProductModel.CatalogTypeId" class="control-label"></label>
@@ -42,6 +42,11 @@
                 <label asp-for="ProductModel.Price" class="control-label"></label>
                 <input asp-for="ProductModel.Price" class="form-control decimal" /> <span id="ProductTypePrice"></span>
                 <span asp-validation-for="ProductModel.Price" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ProductModel.Discount" class="control-label"></label>
+                <input asp-for="ProductModel.Discount" class="form-control decimal" />
+                <span asp-validation-for="ProductModel.Discount" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ProductModel.Stock" class="control-label"></label>
