--- a/src/Web/Backoffice/Pages/Products/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Edit.cshtml
@@ -46,6 +46,11 @@
                 <span asp-validation-for="ProductModel.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ProductModel.Discount" class="control-label"></label>
+                <input asp-for="ProductModel.Discount" class="form-control decimal" />
+                <span asp-validation-for="ProductModel.Discount" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ProductModel.Stock" class="control-label"></label>
                 <input asp-for="ProductModel.Stock" class="form-control" />
                 <span asp-validation-for="ProductModel.Stock" class="text-danger"></span>
