shop discounts changes

--- a/src/Web/DamaWeb/Pages/_product.cshtml
+++ b/src/Web/DamaWeb/Pages/_product.cshtml
@@ -2,6 +2,10 @@
 
     <form asp-page="/Basket/Index" method="post" class="text-center">
         <a asp-page="/Product" asp-route-id="@Model.ProductSlug">
+            @if(Model.PriceBeforeDiscount.HasValue)
+            {
+                <img src="~/images/promocao.png" width="120" class="card-img-overlay left-auto" />
+            }
             <img class="esh-catalog-thumbnail" src="@Model.PictureUri" alt="@Model.CatalogItemName - Presentes Personalizados - Dama no Jornal&reg;" />
         </a>
         <input class="esh-catalog-button add-product" type="submit" value="ADICIONAR" />
