--- a/src/Web/DamaWeb/wwwroot/css/_custom-styles.scss
+++ b/src/Web/DamaWeb/wwwroot/css/_custom-styles.scss
@@ -473,3 +473,11 @@ iframe {
         line-height: 30px;
     }
 }
+
+.line-through {
+    text-decoration: line-through;
+}
+
+.left-auto {
+    left: auto;
+}
