--- a/src/Web/DamaWeb/Pages/_productDetail.cshtml
+++ b/src/Web/DamaWeb/Pages/_productDetail.cshtml
@@ -1,192 +1,203 @@
 ﻿@model ProductViewModel
 
-<form asp-page="/Basket/Index" asp-page-handler="addtobasket" method="post">
-    <h1 class="dama-product-title">@Model.ProductTitle</h1>
-    <div class="row justify-content-center mt-3 mt-md-3">
-        <div class="dama-product-price">
-            <span>@Model.ProductPrice</span>
-        </div>
-    </div>
-    <div class="text-center my-3 my-sm-3 mt-md-3 mb-md-3">
-        <img class="separator" src="~/images/barra-coracao.png" />
-    </div>
-
-    <div class="row dama-product-attr mb-2 mb-md-3 ">
-        <label class="col-4 col-form-label">Quantidade</label>
-        <div class="col-8 btn-group w-100 align-items-center" role="group">
-            <a id="btnSub" class="mr-2"><i class="fas fa-chevron-down"></i></a>
-            <input asp-for="ProductQuantity" class="form-control col-3 text-center">
-            <a id="btnAdd" class="ml-2"><i class="fas fa-chevron-up"></i></a>
-        </div>
-    </div>
-
-    @if (Model.ProductReferences.Any())
-    {
-
-        <div class="row dama-product-attr mb-2 mb-md-3">
-            <label class="col-4 col-form-label">@Model.ProductReferences.First().Label</label>
-            <div class="col-8">
-                <select id="referenceProducts" class="form-control" asp-items="ViewBag.ProductReferences"></select>
+    <form asp-page="/Basket/Index" asp-page-handler="addtobasket" method="post">
+        <h1 class="dama-product-title">@Model.ProductTitle</h1>
+        @if (Model.ProductPriceBeforeDiscount.HasValue)
+        {
+            <div class="discount-img text-right">
+                <img src="~/images/promocao.png" width="150" class="card-img-overlay left-auto" />
             </div>
-        </div>
-    }
-
-    @for (int i = 0; i < Model.Attributes.Count; i++)
-    {
-        <input type="hidden" asp-for="Attributes[i].AttributeType" />
-        <div class="row dama-product-attr mb-2 mb-md-3">
-            <label class="col-4 col-form-label">@Model.Attributes[i].Label</label>
-            <div class="col-8">
-                <select asp-for="Attributes[i].Selected" class="form-control atribute-items" asp-items="Model.Attributes[i].Items">
-                    <option value="-1">@Model.Attributes[i].DefaultText</option>
-                </select>
-                <span asp-validation-for="Attributes[i].Selected" class="text-danger"></span>
-            </div>
-        </div>
-    }
-    <div class="row">
-        <div class="col">
-            <small>Se ficaste com alguma dúvida, envia-nos <a href="#" data-toggle="modal" data-target="#sendMessageSection" class="link-dama-black"> uma mensagem aqui.</a></small>
-        </div>
-    </div>
-    <div id="sendMessageSection" class="border border-menta modal fade">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">                
-                <div class="modal-body">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <div class="form-group dama-product-attr mx-2">
-                        <label asp-for="ContactEmailAddress" class="col-form-label"></label>
-                        <input asp-for="ContactEmailAddress" class="form-control" />
-                        <span asp-validation-for="ContactEmailAddress" class="text-danger"></span>
-                    </div>
-                    <div class="form-group dama-product-attr mx-2">
-                        <label asp-for="Message" class="col-form-label"></label>
-                        <textarea asp-for="Message" class="form-control"></textarea>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Cancelar</button>
-                    <button type="submit" class="btn btn-sm btn-menta" asp-page="/Product" asp-page-handler="SendMessage" >Enviar</button>
+            <div class="row justify-content-center mt-3 mt-md-3">
+                <div class="dama-product-price line-through text-muted">
+                    <span>@Model.ProductPriceBeforeDiscount</span>
                 </div>
             </div>
-        </div>    
-    </div>
+        }
+        <div class="row justify-content-center mt-3 mt-md-3">
+            <div class="dama-product-price">
+                <span>@Model.ProductPrice</span>
+            </div>
+        </div>
+        <div class="text-center my-3 my-sm-3 mt-md-3 mb-md-3">
+            <img class="separator" src="~/images/barra-coracao.png" />
+        </div>
 
-    <div class="row mt-4 w-100">
-        <input class="dama-product-add ml-2 w-100" type="submit" value="ADICIONAR AO CARRINHO" />
+        <div class="row dama-product-attr mb-2 mb-md-3 ">
+            <label class="col-4 col-form-label">Quantidade</label>
+            <div class="col-8 btn-group w-100 align-items-center" role="group">
+                <a id="btnSub" class="mr-2"><i class="fas fa-chevron-down"></i></a>
+                <input asp-for="ProductQuantity" class="form-control col-3 text-center">
+                <a id="btnAdd" class="ml-2"><i class="fas fa-chevron-up"></i></a>
+            </div>
+        </div>
+
+        @if (Model.ProductReferences.Any())
+        {
+
+            <div class="row dama-product-attr mb-2 mb-md-3">
+                <label class="col-4 col-form-label">@Model.ProductReferences.First().Label</label>
+                <div class="col-8">
+                    <select id="referenceProducts" class="form-control" asp-items="ViewBag.ProductReferences"></select>
+                </div>
+            </div>
+        }
+
+        @for (int i = 0; i < Model.Attributes.Count; i++)
+        {
+            <input type="hidden" asp-for="Attributes[i].AttributeType" />
+            <div class="row dama-product-attr mb-2 mb-md-3">
+                <label class="col-4 col-form-label">@Model.Attributes[i].Label</label>
+                <div class="col-8">
+                    <select asp-for="Attributes[i].Selected" class="form-control atribute-items" asp-items="Model.Attributes[i].Items">
+                        <option value="-1">@Model.Attributes[i].DefaultText</option>
+                    </select>
+                    <span asp-validation-for="Attributes[i].Selected" class="text-danger"></span>
+                </div>
+            </div>
+        }
+        <div class="row">
+            <div class="col">
+                <small>Se ficaste com alguma dúvida, envia-nos <a href="#" data-toggle="modal" data-target="#sendMessageSection" class="link-dama-black"> uma mensagem aqui.</a></small>
+            </div>
+        </div>
+        <div id="sendMessageSection" class="border border-menta modal fade">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <div class="form-group dama-product-attr mx-2">
+                            <label asp-for="ContactEmailAddress" class="col-form-label"></label>
+                            <input asp-for="ContactEmailAddress" class="form-control" />
+                            <span asp-validation-for="ContactEmailAddress" class="text-danger"></span>
+                        </div>
+                        <div class="form-group dama-product-attr mx-2">
+                            <label asp-for="Message" class="col-form-label"></label>
+                            <textarea asp-for="Message" class="form-control"></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-sm btn-menta" asp-page="/Product" asp-page-handler="SendMessage">Enviar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-4 w-100">
+            <input class="dama-product-add ml-2 w-100" type="submit" value="ADICIONAR AO CARRINHO" />
+            @if (Model.CanCustomize)
+            {
+                <a id="btnCustomize" class="btn btn-outline-pink ml-2 mt-2 w-100" role="button" data-toggle="collapse" href="#customizeSection">AQUI PODES PERSONALIZAR</a>
+            }
+        </div>
+        <small id="txtDeliveryStockTime" class="text-muted dama-small-text my-3">Tempo de entrega entre 2 a 3 dias úteis para produtos em stock.</small>
+
         @if (Model.CanCustomize)
         {
-            <a id="btnCustomize" class="btn btn-outline-pink ml-2 mt-2 w-100" role="button" data-toggle="collapse" href="#customizeSection">AQUI PODES PERSONALIZAR</a>
-        }
-    </div>
-    <small id="txtDeliveryStockTime" class="text-muted dama-small-text my-3">Tempo de entrega entre 2 a 3 dias úteis para produtos em stock.</small>
-
-    @if (Model.CanCustomize)
-    {
-    <div id="customizeSection" class="collapse my-4">
-        <div class="text-center">PERSONALIZAR</div>
-        <div class="text-center mb-3">
-            <small>(Escolhe uma opção)</small>
-        </div>
-        @if (Model.CanCustomizeName)
-        {
-            <div class="row mb-2">
-                <div class="col-12 col-md-8 dama-customize-question mb-2 mb-sm-0">
-                    &#9679; Queres acrescentar um nome/frase?
+            <div id="customizeSection" class="collapse my-4">
+                <div class="text-center">PERSONALIZAR</div>
+                <div class="text-center mb-3">
+                    <small>(Escolhe uma opção)</small>
                 </div>
-                <div class="col-12 col-md-4">
-                    <a id="btnAddName" class="btn btn-sm btn-menta w-100" role="button" data-toggle="collapse" href="#addName">ADICIONAR</a>
-                </div>
-            </div>
-            <div id="addName" class="collapse">
-                <div class="col mb-4 border border-menta px-4 pt-3">
-                    <div class="form-group row">
-                        <label class="col-form-label dama-customize-question">1 - Nome ou Frase</label>
-                        <div class="col">
-                            <input asp-for="NameInput" class="form-control dama-product-input" placeholder="escreve aqui" />
-                            <span asp-validation-for="NameInput" class="text-danger"></span>
-                        </div>
-                    </div>
-                    @if (Model.PictureHelpers?.Count > 0)
-                    {
-                        <div class="form-group row">
-                            <label class="col-form-label dama-customize-question">2 - Escolhe uma opção</label>
-                        </div>
-                        <div id="divSelectImage" class="form-group row">
-                            @foreach (var item in Model.PictureHelpers)
-                            {
-                                <div class="col" fileName="@item.PictureFileName"><img src="@item.PictureUri" alt="Dama no Jornal" class="img-thumbnail" /></div>
-                            }
-                        </div>
-                    }
-
-                    <div class="row">
-                        <small class="text-muted dama-small-text">
-                            *Esta personalização tem um custo adicional de @Model.CustomizePrice.Value.ToString().Replace('.', ',')€<br />
-                            e um prazo de entrega de @Model.DeliveryTimeMin a @Model.DeliveryTimeMax @(DamaWeb.Extensions.EnumHelper<ApplicationCore.Entities.DeliveryTimeUnitType>.GetDisplayValue(Model.DeliveryTimeUnit)).
-                        </small>
-                    </div>
-                </div>
-                <input class="dama-product-add w-100" type="submit" value="ADICIONAR AO CARRINHO" />
-            </div>            
-        }
-        @if (Model.CanCustomizeTotal)
-        {
-            <div id="divCustomizeTotal" class="row mb-4 mb-md-3 align-items-center">
-                <div class="col-12 col-md-8 dama-customize-question  mb-2 mb-sm-0">&#9679; Queres uma ilustração personalizada?</div>
-                <div class="col-12 col-md-4">
-                    <a class="btn btn-sm btn-menta w-100" role="button" asp-page="/Customize/Index" asp-route-CategoryId="@Model.CategoryId" asp-route-CatalogItemId="@Model.ProductTypeId" asp-fragment="produtos">PERSONALIZAR</a>
-                </div>
-            </div>
-        }
-    </div>
-    }
-
-
-
-    <div class="text-center my-3 my-sm-3">
-        <img class="separator" src="~/images/barra-coracao.png" />
-    </div>
-
-    <p class="dama-product-description my-3 my-sm-3">@Html.Raw(Model.ProductDescription)</p>
-
-    
-
-
-    <hr />
-    <div class="row dama-product-attr mt-2 mt-md-4">
-        <label asp-for="ProductSKU" class="col-3 col-form-label"></label>
-        <div class="col-9">
-            <span>@Model.ProductSKU</span>
-        </div>
-    </div>
-    <div class="row dama-product-attr mt-md-2">
-        <label class="col-3 col-form-label">Categorias:</label>
-        <div class="col-9">
-            @foreach (var item in Model.Categories)
-            {
-                <a asp-page="/Category/Index" asp-route-id="@item.TagName">@item.Name</a>
-            }
-        </div>
-    </div>
-    <div class="row dama-product-attr mt-md-2">
-        <label class="col-3 col-form-label">Tags:</label>
-        <div class="col-9">
-            @foreach (var item in Model.Tags)
-            {
-                <a asp-page="/Tag/Index" asp-route-tagName="@item.Uri" asp-route-q="@item.TagName">@item.Name</a>
-                @if (item != Model.Tags.Last())
+                @if (Model.CanCustomizeName)
                 {
-                    <text>,</text>
+                    <div class="row mb-2">
+                        <div class="col-12 col-md-8 dama-customize-question mb-2 mb-sm-0">
+                            &#9679; Queres acrescentar um nome/frase?
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <a id="btnAddName" class="btn btn-sm btn-menta w-100" role="button" data-toggle="collapse" href="#addName">ADICIONAR</a>
+                        </div>
+                    </div>
+                    <div id="addName" class="collapse">
+                        <div class="col mb-4 border border-menta px-4 pt-3">
+                            <div class="form-group row">
+                                <label class="col-form-label dama-customize-question">1 - Nome ou Frase</label>
+                                <div class="col">
+                                    <input asp-for="NameInput" class="form-control dama-product-input" placeholder="escreve aqui" />
+                                    <span asp-validation-for="NameInput" class="text-danger"></span>
+                                </div>
+                            </div>
+                            @if (Model.PictureHelpers?.Count > 0)
+                            {
+                                <div class="form-group row">
+                                    <label class="col-form-label dama-customize-question">2 - Escolhe uma opção</label>
+                                </div>
+                                <div id="divSelectImage" class="form-group row">
+                                    @foreach (var item in Model.PictureHelpers)
+                                    {
+                                        <div class="col" fileName="@item.PictureFileName"><img src="@item.PictureUri" alt="Dama no Jornal" class="img-thumbnail" /></div>
+                                    }
+                                </div>
+                            }
+
+                            <div class="row">
+                                <small class="text-muted dama-small-text">
+                                    *Esta personalização tem um custo adicional de @Model.CustomizePrice.Value.ToString().Replace('.', ',')€<br />
+                                    e um prazo de entrega de @Model.DeliveryTimeMin a @Model.DeliveryTimeMax @(DamaWeb.Extensions.EnumHelper<ApplicationCore.Entities.DeliveryTimeUnitType>.GetDisplayValue(Model.DeliveryTimeUnit)).
+                                </small>
+                            </div>
+                        </div>
+                        <input class="dama-product-add w-100" type="submit" value="ADICIONAR AO CARRINHO" />
+                    </div>
                 }
-            }
+                @if (Model.CanCustomizeTotal)
+                {
+                    <div id="divCustomizeTotal" class="row mb-4 mb-md-3 align-items-center">
+                        <div class="col-12 col-md-8 dama-customize-question  mb-2 mb-sm-0">&#9679; Queres uma ilustração personalizada?</div>
+                        <div class="col-12 col-md-4">
+                            <a class="btn btn-sm btn-menta w-100" role="button" asp-page="/Customize/Index" asp-route-CategoryId="@Model.CategoryId" asp-route-CatalogItemId="@Model.ProductTypeId" asp-fragment="produtos">PERSONALIZAR</a>
+                        </div>
+                    </div>
+                }
+            </div>
+        }
+
+
+
+        <div class="text-center my-3 my-sm-3">
+            <img class="separator" src="~/images/barra-coracao.png" />
         </div>
-    </div>
-    <input type="hidden" asp-for="ProductSKU" />
-    <input type="hidden" asp-for="ProductId" />
-    <input type="hidden" asp-for="ProductPrice" />
-    <input type="hidden" asp-for="CustomizePrice" />
-    <input type="hidden" asp-for="CustomizePictureFileName" />
-</form>
+
+        <p class="dama-product-description my-3 my-sm-3">@Html.Raw(Model.ProductDescription)</p>
+
+
+
+
+        <hr />
+        <div class="row dama-product-attr mt-2 mt-md-4">
+            <label asp-for="ProductSKU" class="col-3 col-form-label"></label>
+            <div class="col-9">
+                <span>@Model.ProductSKU</span>
+            </div>
+        </div>
+        <div class="row dama-product-attr mt-md-2">
+            <label class="col-3 col-form-label">Categorias:</label>
+            <div class="col-9">
+                @foreach (var item in Model.Categories)
+                {
+                    <a asp-page="/Category/Index" asp-route-id="@item.TagName">@item.Name</a>
+                }
+            </div>
+        </div>
+        <div class="row dama-product-attr mt-md-2">
+            <label class="col-3 col-form-label">Tags:</label>
+            <div class="col-9">
+                @foreach (var item in Model.Tags)
+                {
+                    <a asp-page="/Tag/Index" asp-route-tagName="@item.Uri" asp-route-q="@item.TagName">@item.Name</a>
+                    @if (item != Model.Tags.Last())
+                    {
+                        <text>,</text>
+                    }
+                }
+            </div>
+        </div>
+        <input type="hidden" asp-for="ProductSKU" />
+        <input type="hidden" asp-for="ProductId" />
+        <input type="hidden" asp-for="ProductPrice" />
+        <input type="hidden" asp-for="CustomizePrice" />
+        <input type="hidden" asp-for="CustomizePictureFileName" />
+    </form>
