fix promo image size; hide tidio

--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -278,7 +278,7 @@
                 asp-fallback-src="~/lib/font-awesome/js/all.min.js">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
-        <script src="//code.tidio.co/ezibky1uftop7d5dtokyrddyim1xvllc.js"></script>
+        @*<script src="//code.tidio.co/ezibky1uftop7d5dtokyrddyim1xvllc.js"></script>*@
     </environment>
     @RenderSection("Scripts", required: false)
 
