--- a/src/Web/DamaWeb/wwwroot/css/site.css
+++ b/src/Web/DamaWeb/wwwroot/css/site.css
@@ -7739,4 +7739,8 @@ iframe {
   text-decoration: line-through; }
 
 .left-auto {
-  left: auto; }
+  left: auto;
+  padding-top: 0.25rem; }
+
+.discount-img {
+  position: relative; }
