add unavailable products in backoffice

--- a/src/Web/Backoffice/Pages/Products/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Details.cshtml
@@ -99,6 +99,12 @@
             @Html.DisplayFor(model => model.ProductModel.CanCustomize)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.IsUnavailable)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductModel.IsUnavailable)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProductModel.MetaDescription)
         </dt>
         <dd>
